--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "directories": {
     "lib": "lib"
   },
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node app.js"
   },
   "repository": {
@@ -26,5 +25,8 @@
     "dotenv": "^8.2.0",
     "inquirer": "^8.0.0",
     "mysql2": "^2.2.5"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
   }
 }
